Fixed showing visible view properties value

--- a/components/common/BoardEditor/focalboard/src/components/kanban/kanbanCard.scss
+++ b/components/common/BoardEditor/focalboard/src/components/kanban/kanbanCard.scss
@@ -60,10 +60,6 @@
       padding: 0;
       margin: 0;
     }
-
-    &:empty {
-      display: none;
-    }
   }
 
   .octo-icontitle {
